objects/EUR_CRM_Objective__c.object
<CustomObject>
    <fields>
        <fullName>EUR_CRM_Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Actual_Date__c</fullName>
        <label>Actual Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Actual__c</fullName>
        <label>Actual</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Brand__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Brand</label>
        <referenceTo>EUR_CRM_Quality__c</referenceTo>
        <relationshipLabel>Objectives</relationshipLabel>
        <relationshipName>EUR_PRT_CRM_Objectives</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Comment__c</fullName>
        <label>Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Consumption__c</fullName>
        <label>Consumption (Year-to-Date)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Contract__c</fullName>
        <label>Contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Objectives</relationshipLabel>
        <relationshipName>EUR_CRM_Objectives</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Investment_Mkt__c</fullName>
        <label>Marketing Investment</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Investment_Sales__c</fullName>
        <label>Sales Investment</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Investment_Total__c</fullName>
        <label>Investment Total</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Objective__c</fullName>
        <label>Objective</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Previous_Consumption__c</fullName>
        <label>Consumption (Previous Year)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Type_Action__c</fullName>
        <label>Action Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Kits</fullName>
                </value>
                <value>
                    <fullName>Shares Rotation</fullName>
                </value>
                <value>
                    <fullName>Shares Picture</fullName>
                </value>
                <value>
                    <fullName>Food Paring</fullName>
                </value>
                <value>
                    <fullName>Mentoring Session</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EUR_CRM_Type_Objective__c</fullName>
        <label>Objective Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Consumption by Brand</fullName>
                </value>
                <value>
                    <fullName>Visibility</fullName>
                </value>
                <value>
                    <fullName>Storefronts</fullName>
                </value>
                <value>
                    <fullName>Bar Styling</fullName>
                </value>
                <value>
                    <fullName>Cards/Menus</fullName>
                </value>
                <value>
                    <fullName>P.O.S</fullName>
                </value>
                <value>
                    <fullName>Activation</fullName>
                </value>
                <value>
                    <fullName>Uniforms</fullName>
                </value>
                <value>
                    <fullName>Staff Training</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Objective (EU)</label>
    <nameField>
        <displayFormat>Obj-{0000}</displayFormat>
        <label>Nº Objective</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Objectives (EU)</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>